website/static/css/custom.css
/* your custom css */

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
}

@media only screen and (min-width: 1024px) {
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1400px) {
}

@media only screen and (min-width: 1500px) {
}

.homeContainer .homeSplashFade {
  padding-top: 20px;
}

.homeContainer .homeWrapper {
  background-image: url(/img/hero-bg.png);
  background-position: top;
  background-size: inherit;
  background-repeat: no-repeat;
  height: 600px;
}

.homeContainer .homeWrapper .inner {
  padding-left: 40px;
  padding-right: 40px;
}

.projectTitle {
  color: white;
  border-radius: 6px;
  padding-left: 12px;
  padding-right: 6px;
  background: rgba(0,0,0,.2);
  padding-top: 15px;
  padding-bottom: 1px;
}

.projectTitle img {
  width: 500px;
}

.fixedHeaderContainer header img {
  border-radius: 6px
}

.fixedHeaderContainer {
  padding-top: 10px;
  padding-bottom: 10px;
}

.nav-footer .sitemap .nav-home {
  margin: 50px 30px 0;
  padding: 10px;
  transition: opacity .15s ease-in-out;
  width: 240px;
  flex: 1;
  opacity: 1.0;
}

.container a, .container a:hover {
  text-decoration: underline;
}

.docLastUpdate img {
  width: 25px;
  vertical-align: middle;
  margin-top: -4px;
}

